--- a/mrs-debezium.yml
+++ b/mrs-debezium.yml
@@ -7,20 +7,20 @@ services:
     container_name: ihe_mrs_debezium
     restart: always
     environment:
-      - DATABASE_HOSTNAME=mysql
+      - DATABASE_HOSTNAME=impilo-mysql
       - DATABASE_PORT=3306
       - DATABASE_USER=debezium
       - DATABASE_PASSWORD=pass123
       - DATABASE_SERVERNAME=ZW000B04
       - DATABASE_HISTORY_FILENAME=/tmp/history-file-1.dat
       - OFFSET_STORAGE_FILENAME=/tmp/offset.dat
-      - IMPILO_FHIR_URL=http://impilo-emr:8080/fhir/
-      - MPI_FHIR_URL=https://openhimcore.zimhie.uwdigi.org/CR/fhir/
-      - MPI_FHIR_USERNAME=testehr
+      - IMPILO_FHIR_URL=http://impilo-server:8080/fhir/
+      - MPI_FHIR_URL=http://openhim-core:5001/CR/fhir/
+      - MPI_FHIR_USERNAME=test
       - MPI_FHIR_PASSWORD=test1234
       - MPI_FHIR_ENABLED=false
-      - SHR_FHIR_URL=https://openhimcore.zimhie.uwdigi.org/CR/fhir/
-      - SHR_FHIR_USERNAME=testehr
+      - SHR_FHIR_URL=http://openhim-core:5001/SHR/fhir/
+      - SHR_FHIR_USERNAME=test
       - SHR_FHIR_PASSWORD=test1234
       - SHR_FHIR_ENABLED=true
       - KAFKA_BROKERS=kafka-01:9092
@@ -31,10 +31,6 @@ services:
       - hapi-fhir
       - public
       - kafka_public
-    depends_on:
-      - impilo-server
-      - impilo-mysql
-      - openhim-core
 
 networks:
   lan:
