--- a/kafka.yml
+++ b/kafka.yml
@@ -6,6 +6,7 @@ services:
   kafka:
     image: bitnami/kafka:3.4.0
     container_name: ihe-kafka
+    restart: unless-stopped
     ports:
       - '9094:9094'
     networks:
