--- a/mrs-debezium.yml
+++ b/mrs-debezium.yml
@@ -5,7 +5,7 @@ services:
   mrs_debezium:
     image: mohcc/mrs-debezium:2.0.4
     container_name: ihe_mrs_debezium
-    restart: always
+    restart: unless-stopped
     environment:
       - DATABASE_HOSTNAME=impilo-mysql
       - DATABASE_PORT=3306
