--- a/openhim.yml
+++ b/openhim.yml
@@ -11,7 +11,7 @@ services:
     volumes:
       - "ihe-openhim-mongo-data:/data/db"
     networks:
-      - mini-hie
+      - cloudbuild
 
   openhim-core:
     container_name: ihe-openhim-core
@@ -31,7 +31,7 @@ services:
     depends_on:
       - openhim-mongo
     networks:
-      - mini-hie
+      - cloudbuild
   openhim-console:
     container_name: ihe-openhim-console
     image: jembi/openhim-console:1.14.4
@@ -41,7 +41,7 @@ services:
     volumes:
       - ./openhim-config/console-default.json:/usr/share/nginx/html/config/default.json
     networks:
-      - mini-hie
+      - cloudbuild
 
 volumes:
   ihe-openhim-mongo-data:
@@ -50,5 +50,5 @@ volumes:
 
 
 networks:
-  mini-hie:
-    name: mini-hie
+  cloudbuild:
+    name: cloudbuild
