--- a/impilo.yml
+++ b/impilo.yml
@@ -12,7 +12,7 @@ services:
       - /etc/localtime:/etc/localtime:ro
       - /etc/timezone:/etc/timezone:ro
     networks:
-      - mini-hie
+      - cloudbuild
 
   impilo-consul:
     image: consul:0.9.3
@@ -20,7 +20,7 @@ services:
     restart: unless-stopped
     command: consul agent -dev -ui -client 0.0.0.0
     networks:
-      - mini-hie
+      - cloudbuild
 
   impilo-config:
     image: jhipster/consul-config-loader:v0.2.2
@@ -33,7 +33,7 @@ services:
       - CONSUL_URL=impilo-consul
       - CONSUL_PORT=8500
     networks:
-      - mini-hie
+      - cloudbuild
 
   impilo-mysql:
     image: mysql:5.7.20
@@ -50,7 +50,7 @@ services:
             - 3307:3306
     command: mysqld --log-bin --server-id=184054 --log-bin=b1028c835df2-bin --lower_case_table_names=1 --skip-ssl --character_set_server=utf8 --explicit_defaults_for_timestamp --max_allowed_packet=30000000
     networks:
-        - mini-hie
+        - cloudbuild
  
   impilo-server:
     image: mohcc/mrs:${VERSION}
@@ -65,7 +65,7 @@ services:
       - APPLICATION_SITEID=${SITE_ID}
       - JHIPSTER_SLEEP=10 # gives time for the database to boot before the application
     networks:
-      - mini-hie
+      - cloudbuild
     depends_on:
       - impilo-mysql
       - impilo-amqp
@@ -82,12 +82,12 @@ services:
     ports:
       - 3000:3000
     networks:
-      - mini-hie
+      - cloudbuild
     restart: unless-stopped
     depends_on:
       - impilo-mysql
       - impilo-amqp
 
 networks:
-  mini-hie:
-    name: mini-hie
+  cloudbuild:
+    name: cloudbuild
