--- a/hapi-fhir.yml
+++ b/hapi-fhir.yml
@@ -3,16 +3,14 @@ version: "3.8"
 
 services:
 
-  hapi-postgres:
+  hapi-fhir-db:
       image: postgres:14.1-alpine
       container_name: ihe_hapi_postgres
       restart: unless-stopped
       environment:
           - POSTGRES_USER=admin
           - POSTGRES_PASSWORD=admin
-          - POSTGRES_DB=fhirdb
-      ports:
-          - '5433:5432'
+          - POSTGRES_DB=hapi
       volumes:
           - ihe-hapi_db_vol:/var/lib/postgresql/data
       networks:
@@ -29,7 +27,7 @@ services:
       networks:
           - cloudbuild
       depends_on:
-          - hapi-postgres
+          - hapi-fhir-db
 
 networks:
   cloudbuild:
