--- a/.env
+++ b/.env
@@ -1,4 +1,12 @@
+# Impilo env variables
 SITE_ID=ZW000B03
 PROFILE=dev
 VERSION=1.2.31-SNAPSHOT
 SERVER_PORT=52
+
+# Controller Spark env variables
+COMPOSE_HTTP_TIMEOUT=200
+PIPELINE_CONFIG=./config
+DWH_ROOT=./dwh
+DATABASE_DUMP_MODE=small
+JAVA_OPTS=-Xms2g -Xmx2g
