rename dwh config

--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ SERVER_PORT=52
 
 # Controller Spark env variables
 COMPOSE_HTTP_TIMEOUT=200
-PIPELINE_CONFIG=./config
+PIPELINE_CONFIG=./dwh-config
 DWH_ROOT=./dwh
 DATABASE_DUMP_MODE=small
 JAVA_OPTS=-Xms2g -Xmx2g
