--- a/dwh-config/thriftserver-hive-config_local.json
+++ b/dwh-config/thriftserver-hive-config_local.json
@@ -1,7 +1,7 @@
 {
   "jdbcDriverClass" : "org.apache.hive.jdbc.HiveDriver",
   "databaseService" : "hive2",
-  "databaseHostName" : "spark-thriftserver",
+  "databaseHostName" : "ihe-spark-thriftserver",
   "databasePort" : "10000",
   "databaseUser" : "hive",
   "databasePassword" : "",
