--- a/dwh-config/application.yaml
+++ b/dwh-config/application.yaml
@@ -22,7 +22,7 @@ fhirdata:
   # `hapi-server` is another docker example where a container with that name is
   # running on the same docker network.
   # fhirServerUrl: "http://172.17.0.1:8091/fhir"
-  # fhirServerUrl: "http://hapi-server:8080/fhir"
+  fhirServerUrl: "http://hapi-server:8080/fhir"
   dbConfig: "config/hapi-postgres-config_local.json"
   dwhRootPrefix: "/dwh/controller_DWH"
   incrementalSchedule: "0 0 * * * *"
@@ -31,7 +31,7 @@ fhirdata:
   # There is no Questionnaire in our test FHIR server, but it is added to
   # prevent regression of https://github.com/google/fhir-data-pipes/issues/785.
   # TODO: add resource table creation to e2e tests.
-  resourceList: "Patient,Encounter,Observation,Questionnaire,Condition,Practitioner,Location,Organization"
+  resourceList: "Patient,Encounter,Observation,Questionnaire,Condition,Practitioner,Location,Organization,Appointment,MedicationDispense"
   maxWorkers: 1
   numThreads: -1
   createHiveResourceTables: true
