--- a/dwh-config/application.yaml
+++ b/dwh-config/application.yaml
@@ -31,7 +31,7 @@ fhirdata:
   # There is no Questionnaire in our test FHIR server, but it is added to
   # prevent regression of https://github.com/google/fhir-data-pipes/issues/785.
   # TODO: add resource table creation to e2e tests.
-  resourceList: "Patient,Encounter,Observation,Questionnaire,Condition,Practitioner,Location,Organization,Appointment,MedicationDispense"
+  resourceList: "Patient,Encounter,Observation,Questionnaire,Condition,Practitioner,Location,Organization,Appointment,MedicationDispense,Specimen,ServiceRequest,Task"
   maxWorkers: 1
   numThreads: -1
   createHiveResourceTables: true
