--- a/impilo.yml
+++ b/impilo.yml
@@ -3,7 +3,7 @@ version: "3.8"
 
 services:
 
-  impilo-amqp:
+  amqp:
     image: rabbitmq:management-alpine
     container_name: ihe-impilo-amqp
     restart: unless-stopped
@@ -14,7 +14,7 @@ services:
     networks:
       - cloudbuild
 
-  impilo-consul:
+  consul:
     image: consul:0.9.3
     container_name: ihe-impilo-consul
     restart: unless-stopped
@@ -22,7 +22,7 @@ services:
     networks:
       - cloudbuild
 
-  impilo-config:
+  config:
     image: jhipster/consul-config-loader:v0.2.2
     container_name: ihe-impilo-config
     restart: unless-stopped
@@ -30,12 +30,12 @@ services:
       - ./impilo-config:/config
     environment:
       - INIT_SLEEP_SECONDS=5
-      - CONSUL_URL=impilo-consul
+      - CONSUL_URL=consul
       - CONSUL_PORT=8500
     networks:
       - cloudbuild
 
-  impilo-mysql:
+  mysql:
     image: mysql:5.7.20
     container_name: ihe-impilo-mysql
     restart: unless-stopped
@@ -46,13 +46,11 @@ services:
         - MYSQL_USER=root
         - MYSQL_ALLOW_EMPTY_PASSWORD=yes
         - MYSQL_DATABASE=mrs
-    ports:
-            - 3307:3306
     command: mysqld --log-bin --server-id=184054 --log-bin=b1028c835df2-bin --lower_case_table_names=1 --skip-ssl --character_set_server=utf8 --explicit_defaults_for_timestamp --max_allowed_packet=30000000
     networks:
         - cloudbuild
  
-  impilo-server:
+  server:
     image: mohcc/mrs:${VERSION}
     container_name: ihe-impilo-server
     restart: unless-stopped
@@ -60,33 +58,31 @@ services:
       - ${SERVER_PORT}:8080
     environment:
       - SPRING_PROFILES_ACTIVE=$PROFILE
-      - SPRING_CLOUD_CONSUL_HOST=impilo-consul
+      - SPRING_CLOUD_CONSUL_HOST=consul
       - SPRING_CLOUD_CONSUL_PORT=8500
       - APPLICATION_SITEID=${SITE_ID}
       - JHIPSTER_SLEEP=10 # gives time for the database to boot before the application
     networks:
       - cloudbuild
     depends_on:
-      - impilo-mysql
-      - impilo-amqp
+      - mysql
+      - amqp
 
-  impilo-deduplication:
+  deduplication:
     image: tinashebutsa/deduplication:1.5
     container_name: ihe-impilo-deduplication
     environment:
       - MYSQL_USER=root
-      - MYSQL_ROOT_HOST=impilo-mysql
+      - MYSQL_ROOT_HOST=mysql
       - MYSQL_PASSWORD=
-      - amqpserver=impilo-amqp
+      - amqpserver=amqp
       - PYTHONUNBUFFERED=1
-    ports:
-      - 3000:3000
     networks:
       - cloudbuild
     restart: unless-stopped
     depends_on:
-      - impilo-mysql
-      - impilo-amqp
+      - mysql
+      - amqp
 
 networks:
   cloudbuild:
