--- a/impilo.yml
+++ b/impilo.yml
@@ -46,6 +46,8 @@ services:
         - MYSQL_USER=root
         - MYSQL_ALLOW_EMPTY_PASSWORD=yes
         - MYSQL_DATABASE=mrs
+    ports:
+       - 3308:3306
     command: mysqld --log-bin --server-id=184054 --log-bin=b1028c835df2-bin --lower_case_table_names=1 --skip-ssl --character_set_server=utf8 --explicit_defaults_for_timestamp --max_allowed_packet=30000000
     networks:
         - cloudbuild
