--- a/haproxy-config/haproxy.cfg
+++ b/haproxy-config/haproxy.cfg
@@ -22,10 +22,23 @@ frontend fe_openhimcomms
     timeout client 10s
     use_backend be_openhimcomms
 
-backend be_openhimconsole
+frontend fe_hapifhir
+    bind *:9198
     mode http
-    server openhimconsole openhim-console:80
+    timeout client 10s
+    use_backend be_hapifhir
+
+backend be_openhimconsole
+    mode http    
+    server openhimconsole  ihe-nginx:9898 check
+    http-request set-header Host openhimconsole.mohcc.gov.zw
 
 backend be_openhimcomms
     mode http
-    server openhimcomms openhim-core:8080 ssl verify none
+    server openhimcomms ihe-nginx:9898 check
+    http-request set-header Host openhimcomms.mohcc.gov.zw
+
+backend be_hapifhir
+    mode http    
+    server hapifhir  ihe-nginx:9898 check
+    http-request set-header Host hapifhir.mohcc.gov.zw
