--- a/nginx-config/nginx.conf
+++ b/nginx-config/nginx.conf
@@ -2,17 +2,50 @@ worker_processes 1;
 events { worker_connections 1024; }
 
 http {
-  server {
-    listen 9898;
-    listen [::]:9898;
-    server_name localhost;
-    location / {
-       proxy_ssl_verify               off;
-       proxy_pass https://openhim-core:8080;
-    }
 
-    location /openhim-console {
-       proxy_pass http://openhim-console:80/;
+  server {
+    listen                9898;
+    listen                [::]:9898;
+    server_name           openhimcomms.*;
+
+    location / {
+        proxy_ssl_verify  off;
+        proxy_pass        https://openhim-core:8080;
     }
   }
+
+  server {
+    listen                9898;
+    listen                [::]:9898;
+    server_name           openhimconsole.*;
+    location / {
+        proxy_pass        http://openhim-console:80;
+    }
+  }
+
+
+  server {
+    listen                9898;
+    listen                [::]:9898;
+    server_name           openhimcore.*;
+    client_max_body_size  10M;
+
+    location / {
+        proxy_pass        http://openhim-core:5000;
+    }
+}
+
+server {
+    listen                9898;
+    listen                [::]:9898;
+    server_name           hapifhir.*;
+
+    location / {
+        proxy_pass        http://hapi-server:8080;
+    }
+}
+
+
+
+
 }
