--- a/opencr.yml
+++ b/opencr.yml
@@ -10,7 +10,7 @@ services:
         - POSTGRES_PASSWORD=admin
         - POSTGRES_DB=hapi
     volumes:
-      - "opencr-postgres-1-data:/bitnami/postgresql"
+          - opencr-hapi_db_vol:/var/lib/postgresql/data
     networks:
       - cloudbuild
   
@@ -35,12 +35,6 @@ services:
       - hapi.fhir.enable_repository_validating_interceptor=true
       - JAVA_TOOL_OPTIONS=-Xmx2g
       - CATALINA_OPTS=-Xmx2g
-    healthcheck:
-      test: /bin/wget --no-verbose --tries=1 --spider http://localhost:8080
-      interval: 15s
-      timeout: 5s
-      retries: 5
-      start_period: 2m
 
 
 
@@ -58,11 +52,9 @@ services:
         soft: -1
         hard: -1      
     volumes:
-       - data01:/usr/share/opensearch/data
+       - opencr-es_data_vol:/usr/share/opensearch/data
     networks:
       - cloudbuild
-    healthcheck:
-      test: "curl --silent --fail http://localhost:9200/_cluster/health || exit 1"
 
   opencr:
     container_name: opencr
@@ -86,9 +78,12 @@ services:
       - opencr-es
 
 volumes:
-  opencr-postgres-1-data:    
-  data01:
-    driver: local
+    opencr-hapi_db_vol:
+        name: opencr-hapi_db_vol
+        driver: local
+    opencr-es_data_vol:
+        name: opencr-es_data_vol
+        driver: local
 
 
 networks:
