--- a/nginx-config/nginx.conf
+++ b/nginx-config/nginx.conf
@@ -1,50 +1,79 @@
 worker_processes 1; 
 events { worker_connections 1024; }
 
+
 http {
-
   server {
-    listen                9898;
-    listen                [::]:9898;
-    server_name           openhimcomms.*;
-
+    listen 80;
+    server_name comms.openhim.zhie.local;
     location / {
-        proxy_pass        https://openhim-core:8080;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header Host $http_host;
+      proxy_set_header Authorization $http_authorization;
+      proxy_pass_header Authorization;
+      proxy_pass http://ihe-openhim-core:8080;
+      proxy_redirect off;
     }
   }
-
   server {
-    listen                9898;
-    listen                [::]:9898;
-    server_name           openhimconsole.*;
+    listen 80;
+    server_name core.openhim.zhie.local;
     location / {
-        proxy_pass        http://openhim-console:80;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header Host $http_host;
+      proxy_set_header Authorization $http_authorization;
+      proxy_pass_header Authorization;
+      proxy_pass http://ihe-openhim-core:5000;
+      proxy_redirect off;
     }
   }
-
-
   server {
-    listen                9898;
-    listen                [::]:9898;
-    server_name           openhimcore.*;
-    client_max_body_size  10M;
-
+    listen 80;
+    server_name openhim.zhie.local;
     location / {
-        proxy_pass        http://openhim-core:5000;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header Host $http_host;
+      proxy_set_header Authorization $http_authorization;
+      proxy_pass_header Authorization;
+      proxy_pass http://ihe-openhim-console:80;
+      proxy_redirect off;
     }
-}
-
-server {
-    listen                9898;
-    listen                [::]:9898;
-    server_name           hapifhir.*;
-
+  }
+  server {
+    listen 80;
+    server_name opencr.zhie.local;
     location / {
-        proxy_pass        http://hapi-server:8080;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header Host $http_host;
+      proxy_set_header Authorization $http_authorization;
+      proxy_pass_header Authorization;
+      proxy_pass https://opencr:3000;
+      proxy_redirect off;
+      proxy_ssl_verify off;
+      proxy_ssl_certificate /etc/nginx/certs/opencr.zhie.local.cert;
+      proxy_ssl_certificate_key /etc/nginx/certs/opencr.zhie.local.key;
     }
-}
-
-
-
-
+  }
+  server {
+    listen 80;
+    server_name gofr.zhie.local;
+    location / {
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header Host $http_host;
+      proxy_set_header Authorization $http_authorization;
+      proxy_pass_header Authorization;
+      proxy_pass http://gofr:4000;
+      proxy_redirect off;
+    }
+  }
 }
