--- a/nginx.yml
+++ b/nginx.yml
@@ -5,9 +5,10 @@ services :
     container_name: ihe_nginx_container
     restart: unless-stopped
     ports:
-      - 9898:9898
+      - 80:80
     volumes:
       - ./nginx-config/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx-config/certs:/etc/nginx/certs/
     networks:
       - cloudbuild
 
