--- a/nginx-config/nginx.conf
+++ b/nginx-config/nginx.conf
@@ -5,7 +5,7 @@ events { worker_connections 1024; }
 http {
   server {
     listen 80;
-    server_name comms.openhim.zhie.local;
+    server_name comms.openhim.zhie.local comms.openhim.zhie.mohcc.gov.zw;
     location / {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
@@ -19,7 +19,7 @@ http {
   }
   server {
     listen 80;
-    server_name core.openhim.zhie.local;
+    server_name core.openhim.zhie.local core.openhim.zhie.mohcc.gov.zw;
     location / {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
@@ -33,7 +33,7 @@ http {
   }
   server {
     listen 80;
-    server_name openhim.zhie.local;
+    server_name openhim.zhie.local openhim.zhie.mohcc.gov.zw;
     location / {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
@@ -47,7 +47,7 @@ http {
   }
   server {
     listen 80;
-    server_name opencr.zhie.local;
+    server_name opencr.zhie.local opencr.zhie.mohcc.gov.zw;
     location / {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
@@ -64,7 +64,7 @@ http {
   }
   server {
     listen 80;
-    server_name gofr.zhie.local;
+    server_name gofr.zhie.local gofr.zhie.mohcc.gov.zw;
     location / {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
